css and html prevent double click zoom in and blue highlight on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,10 @@
     font-family: sans-serif;
     user-select: none;
     box-sizing: border-box;
+
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    touch-action: manipulation;
 }
 
 /* scroll bar */
